--- a/style.css
+++ b/style.css
@@ -80,14 +80,14 @@ select {
     list-style-image: url(./solar_map-arrow-up-bold.svg);
     font-weight: 400;
     font-size: 16px;
-    padding-left: 20px;
+    padding-left: 0 0 0 20px;
 }
 
 .books-list {
     /* Стили для нумерованного списка во второй секции */
     font-weight: 400;
     font-size: 16px;
-    padding-left: 20px;
+    padding: 0 0 0 20px;
 }
 
 .label {
@@ -101,6 +101,7 @@ select {
     border: 1px solid rgba(48, 48, 48, 0.3);
     border-radius: 5px;
     padding: 9px 175px 8px 12px;
+    font-size: 13.3333px;
     background: rgba(255, 255, 255, 0);
 }
 
@@ -128,7 +129,7 @@ table {
 th,
 td {
     /* Стили для ячеек таблицы */
-    padding: 12px 14px 11px 15px;
+    padding: 12px 15px;
     font-weight: 700;
     font-size: 14px;
     text-align: left;
@@ -137,7 +138,7 @@ td {
 footer {
     /* Стили для футера */
     background: rgba(163, 167, 255, 0.3);
-    padding: 25px 0;
+    padding: 26px 0;
 }
 
 .footer-link {
@@ -145,4 +146,5 @@ footer {
     font-weight: 400;
     font-size: 14px;
     color: #2965f1;
+    text-decoration-line: underline;
 }
